Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Esp12 dev by phyx-be</title>
+    <title>ESP12 DEV by phyx-be</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Esp12 dev</h1>
+        <h1>ESP12 DEV</h1>
         <p>A development board for the ESP12 and ESP12E WiFi modules.</p>
 
         <p class="view"><a href="https://github.com/phyx-be/ESP12_DEV">View the Project on GitHub <small>phyx-be/ESP12_DEV</small></a></p>
@@ -29,19 +29,19 @@
       </header>
       <section>
         <h1>
-<a id="esp12_dev" class="anchor" href="#esp12_dev" aria-hidden="true"><span class="octicon octicon-link"></span></a>ESP12_DEV</h1>
+<a id="esp12_dev" class="anchor" href="#esp12_dev" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>ESP12_DEV</h1>
 
 <p>A development board for the ESP12 and ESP12E WiFi modules. Featuring some useful sensors and required peripherals to make it work.</p>
 
 <h2>
-<a id="rev-00" class="anchor" href="#rev-00" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rev 00</h2>
+<a id="rev-00" class="anchor" href="#rev-00" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rev 00</h2>
 
 <p><img src="https://raw.githubusercontent.com/phyx-be/ESP12_DEV/master/ESP12_DEV_00/3D_VIEW.png" alt="ESP12_DEV_00"></p>
 
 <p>Initial board version with 3.3V LDO and 5V LDO. </p>
 
 <h4>
-<a id="known-issues-" class="anchor" href="#known-issues-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Known issues :</h4>
+<a id="known-issues-" class="anchor" href="#known-issues-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Known issues :</h4>
 
 <ul>
 <li>TXB0106 symbol is wrong resulting in a short circuit</li>
@@ -49,7 +49,7 @@
 </ul>
 
 <h2>
-<a id="rev-01" class="anchor" href="#rev-01" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rev 01</h2>
+<a id="rev-01" class="anchor" href="#rev-01" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rev 01</h2>
 
 <p><img src="https://raw.githubusercontent.com/phyx-be/ESP12_DEV/master/ESP12_DEV_01/3D_VIEW.png" alt="ESP12_DEV_01"></p>
 
@@ -59,7 +59,7 @@
 </ul>
 
 <h2>
-<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
 <li>3V3 level FTDI-compatible UART pin header</li>
